fix minor bug for lists and add cc-w-auto class for grids to make float like alignments easily

--- a/chuckcss/components/grids.less
+++ b/chuckcss/components/grids.less
@@ -105,6 +105,9 @@
                     &-stretch {._flex-align-self(stretch);}
                 }
             }
+            &-w-auto {
+                ._flex(0 0 auto);
+            }
         }
     }
 
