--- a/chuckcss/core/generator.less
+++ b/chuckcss/core/generator.less
@@ -401,7 +401,7 @@
 
             &:before {
                 position:absolute;
-                left: -20px;
+                left: -1.3em;
                 top: 4px;
             }
 
